fix: right-align the right content of topmenu

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -39,6 +39,7 @@
 .right {
   float: right;
   height: 100%;
+  margin-left: auto;
   overflow: hidden;
   .action {
     display: inline-block;
